# vaclav

./: README.md  main.py
delivery/: admin.py  mixins.py  models.py  permissions.py  serializers.py  service.py  tasks.py  urls.py  utils.py  views.py
django_delivery_7/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
pythonProject/: main.py
pythonProject/myproject/: pyproject.toml
