[tool.poetry]
name = "myproject"
version = "0.1.0"
description = "my own project"
authors = ["Vaclav Demeshkevich <cy4ok2006@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
